Fixed bottom gap bug

--- a/src/htmlarea.inkwall.sass
+++ b/src/htmlarea.inkwall.sass
@@ -8,6 +8,7 @@
 
 	textarea, .content
 		resize: none
+		display: block
 		margin: 0 !important
 		padding: 1em
 		border: none
